# MedAlerta

./: .gitignore  README.md
embedded/: CMakeLists.txt  main.c
embedded/b64/: ccommon.h  cencode.h  cendode.c
embedded/cjson/: cJSON.c  cJSON.h
embedded/display/: ssd1306_i2c.c
embedded/inc/: bitmaps.h
web/: .env.example  build.sh  pyproject.toml  requirements.txt  vercel.json
web/core/: asgi.py  settings.py  urls.py  wsgi.py
web/global/templates/global/pages/: base.html
web/global/templates/global/partials/: _errors.html  _footer.html  _messages.html  _navbar.html
web/helpers/: validators.py
web/medicine/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
web/medicine/migrations/: 0001_initial.py
web/medicine/templates/medicine/pages/: add.html  medicine_list.html  medicines.html
web/theme/static_src/: package-lock.json  package.json  tailwind.config.js
web/theme/static_src/src/: styles.css
web/user/: forms.py  urls.py  views.py
web/user/templates/user/pages/: login.html  register.html
